--- a/.gitignore
+++ b/.gitignore
@@ -72,5 +72,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 # Custom Ignore
-Assets/[Ee][Rr][Pp]/
+/[Aa]ssets/[Ee][Rr][Pp]/
 
