--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,9 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Jr-Programmer-Project.sln"
+    "dotnet.defaultSolution": "Jr-Programmer-Project.sln",
+    "cSpell.words": [
+        "Icone",
+        "Scriptable"
+    ]
 }
